# plc-simulator

./: .gitignore  CHANGELOG.md  README.md  plc-simulator-conf.json  plc-simulator.py  pyproject.toml  setup.py
.github/workflows/: docs.yml
plcsimulator/: App.py  BaseFieldbusModule.py  Configurator.py  FieldbusManager.py  FieldbusMessage.py  IoManager.py  Listener.py  MemoryManager.py  ModbusModule.py  __init__.py  __main__.py
plcsimulator/examples/: plc-simulator-conf.json
tests/: test_plcsimulator.py
