[tool.poetry]
name = "plc-simulator"
version = "0.6.0"
description = "PLC Simulation Environment"
authors = ["Paul Breen <pbree@bas.ac.uk>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/paul-breen/plc-simulator"
homepage = "https://github.com/paul-breen/plc-simulator"
documentation = "https://paul-breen.github.io/plc-simulator/"
packages = [{include = "plcsimulator"},
            {include = "plcsimulator/examples/*.json"}
]

[tool.poetry.scripts]
plcsimulator = "plcsimulator.__main__:main"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pdoc = "14.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
